Modified `background-color` of `navbar.html`

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark px-5" style="font-family: Roboto; background-color: #01193d !important;">
+<nav class="navbar navbar-dark bg-dark px-5" style="font-family: Roboto; background-color: #165810 !important;">
   <div class="container-fluid">
     <a class="navbar-brand fw-bold" href="{% url 'home' %}">Home</a>
   </div>
