--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
     {% endblock cardstyle %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="{% static 'htmx.min.js' %}" defer></script>
 
     <div class="fixed-top" style="z-index: -1;">
       {% block background %}
