--- a/dquran/templates/quran/ayat_view.html
+++ b/dquran/templates/quran/ayat_view.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load dtajwid %}
 
 {% block cardstyle %}
   <div class="container">
@@ -6,7 +7,9 @@
       <div class="col-10 bg-white shadow-lg p-5 big-card h-auto">
         {% block content %}
           <h3 class="mb-5">Qur'an {{ ayat.surat }}:{{ ayat.ayat }}</h3>
-          <p class="text-justify">{{ ayat.text }}</p>
+          {% autoescape off %}
+            <p class="text-justify">{{ ayat|get_iqlab }}</p>
+          {% endautoescape %}
           <p class="text-justify">{{ ayat_translation.translation }}</p>
           <div class="d-flex justify-content-end mt-5">
             <a class="btn" href="{% url 'quran_list' %}">Kembali</a>
