--- a/dquran/templates/quran/ayat_view.html
+++ b/dquran/templates/quran/ayat_view.html
@@ -5,11 +5,11 @@
     <div class="row align-items-center justify-content-center my-5">
       <div class="col-10 bg-white shadow-lg p-5 big-card h-auto">
         {% block content %}
-          <h3 class="mb-5">Qur'an {{ ayat.surat }}:{{ ayat.ayat }}</h3>
-          <p class="text-justify">{{ ayat.text }}</p>
+          <h3 class="mb-5">{{ ayatship.surat.number }}:{{ ayatship.number }}</h3>
+          <p class="text-justify">{{ ayatship.ayat.text }}</p>
           <p class="text-justify">{{ ayat_translation.translation }}</p>
           <div class="d-flex justify-content-end mt-5">
-            <a class="btn" href="{% url 'quran_list' %}">Kembali</a>
+            <a class="btn" href="{% url 'ayatship_list' ayatship.surat.number %}">Kembali</a>
           </div>
         {% endblock content %}
       </div>
